# energy

./: .gitignore  AGENTS.md  README.rst  bmw-charging.ipynb  common.py  config.sample.yaml  for-myenergi.ipynb  for-octopus.ipynb  happy.sh  loaders.py  myenergi-harvi.ipynb  myenergi.py  octopus-bill.py  octopus-device.py  octopus-download.py  octopus-tesla-rec.py  octopus-tesla-sync.py  octopus.py  pretty.py  pyproject.toml  requirements.txt  schedule.py  show-changes.py  tesla-backup.py  tesla-download.py  tesla-incoming.py  tesla-login.py  tesla-schedule.py  tesla.py  test_make_seasons.py  test_octopus.py  test_tesla.py  usage.py  visualisations.ipynb
.claude/: settings.local.json
