[tool.poetry]
name = "energy"
version = "0.1.0"
description = "Tools for exploring and reconciling energy usage data."
authors = ["Chris Withers <chris@withers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pandas = "*"
watchdog = "*"
configurator = {version = "^1.2",extras = ["yaml"]}
pendulum = "^*"
TeslaPy = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
