[project]
name = "energy"
version = "0.1.0"
description = "Energy manipulation tools"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "configurator[yaml]>=3.2.0",
    "gql[all]>=3.5.2",
    "mailinglogger>=6.0.0",
    "matplotlib>=3.10.1",
    "notebook>=7.5.6",
    "odfpy>=1.4.1",
    "pandas>=2.2.3",
    "pandas-stubs~=3.0.0",
    "pendulum>=3.0.0",
    "httpx>=0.28",
    "requests>=2.32.3",
    "tesla-api>=2.0.1",
    "teslapy>=2.9.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "testfixtures>=10.0.0",
]

[tool.uv.sources]
# PyPI 2.9.2 fixed the tesla://auth/callback redirect_uri change but not
# the HTTP/2-required token refresh that followed; master has the httpx
# fix but no release yet: https://github.com/tdorssers/TeslaPy/issues/175
teslapy = { git = "https://github.com/tdorssers/TeslaPy", rev = "master" }
